@@ -25,24 +25,10 @@ import se.llbit.chunky.launcher.ui.DebugConsole;
 import se.llbit.chunky.launcher.ui.FirstTimeSetupDialog;
 import se.llbit.chunky.resources.SettingsDirectory;
 
-import javax.swing.*;
-import java.awt.*;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import java.awt.font.TextAttribute;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.PrintStream;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.io.*;
+import java.net.*;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
-import java.util.Arrays;
-import java.util.Map;
 import java.util.Scanner;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicReference;
@@ -60,7 +46,7 @@ import java.util.concurrent.atomic.AtomicReference;
  */
 public class ChunkyLauncher {
 
-  public static final Semver LAUNCHER_VERSION = new Semver("1.13.1");
+  public static final Semver LAUNCHER_VERSION = new Semver("1.14.0");
   public static final int LAUNCHER_SETTINGS_REVISION = 1;
 
   /**
@@ -75,8 +61,8 @@ public class ChunkyLauncher {
   public static void main(String[] args) throws FileNotFoundException {
     boolean retryIfMissingJavafx = true;
 
+    final LauncherSettings settings = new LauncherSettings();
     try {
-      final LauncherSettings settings = new LauncherSettings();
       settings.load();
 
       // Currently, there's nothing that changed from previous launcher settings revisions.
@@ -94,11 +80,11 @@ public class ChunkyLauncher {
       LaunchMode mode = LaunchMode.GUI;
       String headlessOptions = "";
 
-      if(args.length > 0) {
+      if (args.length > 0) {
         mode = LaunchMode.HEADLESS;
-        for(int i = 0; i < args.length; i++) {
+        for (int i = 0; i < args.length; i++) {
           String arg = args[i];
-          switch(arg) {
+          switch (arg) {
             case "--nolauncher":
               mode = LaunchMode.GUI;
               break;
@@ -117,7 +103,7 @@ public class ChunkyLauncher {
             case "--update":
             case "--updateAlpha":
               ReleaseChannel channel;
-              if(arg.equals("--updateAlpha")) {
+              if (arg.equals("--updateAlpha")) {
                 channel = LauncherSettings.SNAPSHOT_RELEASE_CHANNEL;
               } else {
                 channel = settings.selectedChannel;
@@ -135,7 +121,7 @@ public class ChunkyLauncher {
                 public void updateAvailable(VersionInfo latest) {
                   try {
                     headlessCreateSettingsDirectory();
-                  } catch(FileNotFoundException e) {
+                  } catch (FileNotFoundException e) {
                     throw new Error(e);
                   }
                   System.out.println("Downloading Chunky " + latest + ":");
@@ -157,35 +143,41 @@ public class ChunkyLauncher {
             case "--noRetryJavafx":
               retryIfMissingJavafx = false;
               // if this is the only option, with "--javaOptions" "<param>" we want the launcher
-              if(args.length == 3)
+              if (args.length == 3)
                 forceLauncher = true;
               break;
             case "--javaOptions":
-              if(i == args.length-1) {
+              if (i == args.length - 1) {
                 System.err.println("--javaOptions must be followed by the options to can chunky with");
                 System.exit(1);
               }
-              if(settings.javaOptions.isEmpty())
-                settings.javaOptions = args[i+1];
-              else if(!settings.javaOptions.contains(args[i+1]))
+              if (settings.javaOptions.isEmpty())
+                settings.javaOptions = args[i + 1];
+              else if (!settings.javaOptions.contains(args[i + 1]))
                 settings.javaOptions = args[i + 1] + " " + settings.javaOptions;
               ++i;
               break;
+            case "--checkJvm":
+              boolean is64Bit = JreUtil.is64BitJvm();
+              if (!is64Bit) {
+                System.err.println("This does not appear to be a 64-bit JVM.");
+              }
+              System.exit(is64Bit ? 0 : -1);
             default:
-              if(!headlessOptions.isEmpty()) {
+              if (!headlessOptions.isEmpty()) {
                 headlessOptions += " ";
               }
               headlessOptions += arg;
               break;
           }
         }
-        if(forceLauncher) {
+        if (forceLauncher) {
           mode = LaunchMode.GUI;
         }
       }
 
       ChunkyDeployer.LoggerBuilder loggerBuilder = () -> {
-        if(settings.forceGuiConsole || (!settings.headless && settings.debugConsole)) {
+        if (settings.forceGuiConsole || (!settings.headless && settings.debugConsole)) {
           AtomicReference<DebugConsole> console = new AtomicReference<>(null);
           CountDownLatch latch = new CountDownLatch(1);
           ChunkyLauncherFx.withLauncher(settings, stage -> {
@@ -196,7 +188,7 @@ public class ChunkyLauncher {
           });
           try {
             latch.await();
-          } catch(InterruptedException ignored) {
+          } catch (InterruptedException ignored) {
             // Ignored.
           }
           return console.get();
@@ -205,7 +197,7 @@ public class ChunkyLauncher {
         }
       };
 
-      if(mode == LaunchMode.HEADLESS) {
+      if (mode == LaunchMode.HEADLESS) {
         // Chunky is being run from the console, i.e. headless mode.
         headlessCreateSettingsDirectory();
         settings.debugConsole = true;
@@ -213,10 +205,18 @@ public class ChunkyLauncher {
         settings.chunkyOptions = headlessOptions;
         ChunkyDeployer.deploy(settings); // Install the embedded version.
         VersionInfo version = ChunkyDeployer.resolveVersion(settings.version);
-        if(ChunkyDeployer.canLaunch(version, null, false)) {
+        if (ChunkyDeployer.canLaunch(version, null, false)) {
+          if (!settings.skipJvmCheck) {
+            if (!ChunkyDeployer.is64BitJvm(settings)) {
+              System.err.println("It seems like you're not using 64-bit Java. For best " +
+                "performance and in order to allocate more than 3 GB of RAM to Chunky, you need a 64-bit JVM.");
+            } else {
+              settings.skipJvmCheck = true;
+            }
+          }
           int exitCode = ChunkyDeployer.launchChunky(settings, version, LaunchMode.HEADLESS,
-                  ChunkyLauncher::launchFailure, loggerBuilder);
-          if(exitCode != 0) {
+            ChunkyLauncher::launchFailure, loggerBuilder);
+          if (exitCode != 0) {
             System.exit(exitCode);
           }
         } else {
@@ -230,13 +230,13 @@ public class ChunkyLauncher {
         firstTimeSetup(settings, () -> {
           ChunkyDeployer.deploy(settings); // Install the embedded version.
 
-          if(!finalForceLauncher && !settings.showLauncher) {
+          if (!finalForceLauncher && !settings.showLauncher) {
             // Skip the launcher only if we can launch this version.
             VersionInfo version = ChunkyDeployer.resolveVersion(settings.version);
-            if(ChunkyDeployer.canLaunch(version, null, false)) {
-              if(ChunkyDeployer.launchChunky(settings, version, LaunchMode.GUI,
-                      ChunkyLauncher::launchFailure,
-                      loggerBuilder) == 0) {
+            if (ChunkyDeployer.canLaunch(version, null, false)) {
+              if (ChunkyDeployer.launchChunky(settings, version, LaunchMode.GUI,
+                ChunkyLauncher::launchFailure,
+                loggerBuilder) == 0) {
                 return false;
               }
             }
@@ -244,19 +244,21 @@ public class ChunkyLauncher {
           return true;
         });
       }
-    } catch(NoClassDefFoundError e) {
+    } catch (NoClassDefFoundError e) {
       String cause = e.getMessage();
-      if(cause != null && cause.contains("javafx")) {
+      if (cause != null && cause.contains("javafx")) {
         // Javafx error
-        if(retryIfMissingJavafx)
+        if (retryIfMissingJavafx)
           JavaFxLocator.retryWithJavafx(args);
-        showJavafxError();
+        JavaFxInstaller.launch(settings, args);
       }
       e.printStackTrace(System.err);
     }
   }
 
-  /** Ensure that the settings directory exists. */
+  /**
+   * Ensure that the settings directory exists.
+   */
   private static void headlessCreateSettingsDirectory() throws FileNotFoundException {
     // We will try to set up a Chunky settings directory if one is not already configured.
     File directory = SettingsDirectory.getSettingsDirectory();
@@ -333,6 +335,13 @@ public class ChunkyLauncher {
   public static DownloadStatus tryDownload(File libDir, VersionInfo.Library lib, String theUrl) {
     try {
       URL url = new URL(theUrl);
+      HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+      int responseCode = conn.getResponseCode();
+      if (responseCode == HttpURLConnection.HTTP_MOVED_PERM ||
+        responseCode == HttpURLConnection.HTTP_MOVED_TEMP ||
+        responseCode == HttpURLConnection.HTTP_SEE_OTHER) {
+        return tryDownload(libDir, lib, conn.getHeaderField("Location"));
+      }
       try (
         ReadableByteChannel inChannel = Channels.newChannel(url.openStream());
         FileOutputStream out = new FileOutputStream(lib.getFile(libDir))
@@ -370,64 +379,5 @@ public class ChunkyLauncher {
     } else {
       return String.format("%.1f %s", fSize, unit);
     }
-  }
-
-  private static void showJavafxError() {
-    String[] errorMessages = new String[]{
-            "Error: Java cannot find JavaFX.",
-            "If you are using a JVM for Java 11 or later, " +
-                    "JavaFX is no longer shipped alongside and must be installed separately.",
-            "If you already have JavaFX installed, you need to run Chunky with the command:",
-            "java --module-path <path/to/JavaFX/lib> --add-modules javafx.controls,javafx.fxml -jar <path/to/ChunkyLauncher.jar>"
-    };
-    String faqLink = "https://chunky.lemaik.de/java11";
-    String faqMessage = "Check out this page for more information on how to use Chunky with JavaFX";
-    if(!GraphicsEnvironment.isHeadless()) {
-      JTextField faqLabel;
-      if(Desktop.getDesktop().isSupported(Desktop.Action.BROWSE)) {
-        faqLabel = new JTextField(faqMessage);
-        Font font = faqLabel.getFont();
-        Map attributes = font.getAttributes();
-        attributes.put(TextAttribute.UNDERLINE, TextAttribute.UNDERLINE_ON);
-        faqLabel.setFont(font.deriveFont(attributes));
-        faqLabel.setForeground(Color.BLUE.darker());
-        faqLabel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        faqLabel.setEditable(false);
-        faqLabel.setBackground(null);
-        faqLabel.setBorder(null);
-        faqLabel.addMouseListener(new MouseAdapter() {
-          @Override
-          public void mouseClicked(MouseEvent e) {
-            try {
-              Desktop.getDesktop().browse(new URI(faqLink));
-            } catch(IOException | URISyntaxException ioException) {
-              ioException.printStackTrace();
-            }
-          }
-        });
-      } else {
-        faqLabel = new JTextField(String.format("%s: %s", faqMessage, faqLink));
-        faqLabel.setEditable(false);
-        faqLabel.setBackground(null);
-        faqLabel.setBorder(null);
-        faqLabel.setCursor(Cursor.getPredefinedCursor(Cursor.TEXT_CURSOR));
-      }
-      Object[] dialogContent = {
-              Arrays.stream(errorMessages).map(msg -> {
-                JTextField field = new JTextField(msg);
-                field.setEditable(false);
-                field.setBackground(null);
-                field.setBorder(null);
-                field.setCursor(Cursor.getPredefinedCursor(Cursor.TEXT_CURSOR));
-                return field;
-              }).toArray(),
-              faqLabel
-      };
-      JOptionPane.showMessageDialog(null, dialogContent, "Cannot find JavaFX", JOptionPane.ERROR_MESSAGE);
-    }
-    for(String message : errorMessages) {
-      System.err.println(message);
-    }
-    System.err.printf("%s: %s\n", faqMessage, faqLink);
   }
 }
